refactor(cache): 优化流监听器的空值安全和代码规范
- 为 AbstractStreamListener 添加 NonNull 注解提升空值安全性
- 将 ObjectRecord 泛型参数标记为非空类型
- 使用 getFirst() 替代 get(0) 方法提高代码可读性
- 统一消息重新投递和确认操作的方法调用方式